# GraphicsVulkanEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: shaders.cmake
shaders/: basic.frag  basic.vert  common.glsl
src/: buffer_handle.h  glfw_initialization.cpp  glfw_initialization.h  glfw_monitor.cpp  glfw_monitor.h  glfw_window.cpp  glfw_window.h  graphics.cpp  graphics.h  main.cpp  precomp.h  texture_handle.h  uniform_transformations.h  utilities.cpp  utilities.h  vertex.h
